--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </div>
 
     <div class="container">
-      <h2>Part 3: Incorporating Wireframing Critique</h2>
+      <h2 class="py-3">Incorporating Wireframing Critique</h2>
 
-      <h3>🛠 Product Feedback</h3>
+      <h3 class="pb-3">Product Feedback 🛠</h3>
 
       <p>
         As we worked on implementing a new potluck feature for Partiful, we
@@ -93,7 +93,7 @@
         </li>
       </ul>
 
-      <h3>🔍 Post-Critique Takeaways</h3>
+      <h3 class="py-3">Post-Critique Takeaways 🔍</h3>
 
       <p>
         After the session, upon discussing about next steps, in addition to
@@ -124,6 +124,54 @@
     <div class="container">
       <h2 class="py-3">Hi-Fi Prototype</h2>
 
+      <h3 class="pb-3">Iterative Design Decisions</h3>
+      <p>
+        Feedback from mentors and company founders shaped the final hi-fi
+        prototype. Positive responses highlighted strong features, while
+        constructive suggestions helped refine usability, clarity, and flow. We were able to implement most suggestions (except a seperate screen for RSVPs).
+      </p>
+
+      <h5>Positive feedback</h4>
+
+      <p>
+        ❤️ "Contributions" is a good entry point for list creation.<br />
+        ❤️ Social layer of claimed items in activity feed is good.<br />
+        ❤️ Badges to gameify guest controbutions are great, and can extend
+        current profile badge feature in Partiful.<br />
+        ❤️ Refer a friend feature is nice, something that the comapny would like
+        to continue doing.<br />
+        ❤️ Sign-up feature looks more flexible.<br />
+        ❤️ Button for refferal system looks cute and clickable.<br />
+      </p>
+
+      <h5>Room for Improvement</h4>
+      <p>
+        💭 What would a list look like if it started from a template?<br />
+        🔧 Include only one control for a planner to designate "Must-Have"
+        items, two is confusing.<br />
+        🔧 Default text for notes is too suggestive, consider just using
+        "Notes".<br />
+        🔧 When a planner edits items, including "claimed by" and "assign
+        guests" mixes guest and planner actions making the UX confusing.<br />
+        🔧 To minimize number of screens, consider making Assign Guests a pop-up
+        screen - not full.<br />
+        🔧 Must-have desgination shouldn't be clickable for guests, only
+        planners can define this.<br />
+        🔧 Transparent boxes look clickable for guests, consider a different
+        state representation.<br />
+        🔧 Spots claimed entry point in guest RSVP should be a seperate screen
+        to ensure users do not overlook sign-up.<br />
+        🔧 Assign Items icon looks like a clipboard, this can be a toggle.<br />
+        🔧 Put practical uses for list templates at the top (car sign up,
+        potluck, housing…)
+      </p>
+      <h3 class="py-3">Final Prototype</h3>
+      <p>
+        The final prototype demonstrates two primary user flows: one tailored
+        for planners to create and manage event lists, and another designed for
+        guests to select and claim items to bring. Select which flow to interact
+        with using the "Flows" control panel on the left.
+      </p>
       <div
         class="container align-center py-5"
         style="display: flex; justify-content: center"
@@ -137,13 +185,7 @@
         ></iframe>
       </div>
 
-      <h3>User Flows</h3>
-      <p>
-        The final prototype demonstrates two primary user flows: one tailored
-        for planners to create and manage event lists, and another designed for
-        guests to select and claim items to bring. Select which flow to interact
-        with using the "Flows" control panel on the left.
-      </p>
+      <h3 class="py-3">User Flows</h3>
 
       <div class="row d-felx d-flex">
         <div class="col-md-6 py-3">
@@ -189,46 +231,6 @@
         </div>
       </div>
 
-      <h3 class="py-3">Iterative Design Decisions</h3>
-      <p>
-        Feedback from mentors and company founders shaped the final hi-fi
-        prototype. Positive responses highlighted strong features, while
-        constructive suggestions helped refine usability, clarity, and flow.
-      </p>
-      <h4>Positive feedback</h4>
-
-      <p>
-        ❤️ "Contributions" is a good entry point for list creation.<br />
-        ❤️ Social layer of claimed items in activity feed is good.<br />
-        ❤️ Badges to gameify guest controbutions are great, and can extend
-        current profile badge feature in Partiful.<br />
-        ❤️ Refer a friend feature is nice, something that the comapny would like
-        to continue doing.<br />
-        ❤️ Sign-up feature looks more flexible.<br />
-        ❤️ Button for refferal system looks cute and clickable.<br />
-      </p>
-
-      <h4>Room for Improvement</h4>
-      <p>
-        💭 What would a list look like if it started from a template?<br />
-        🔧 Include only one control for a planner to designate "Must-Have"
-        items, two is confusing.<br />
-        🔧 Default text for notes is too suggestive, consider just using
-        "Notes".<br />
-        🔧 When a planner edits items, including "claimed by" and "assign
-        guests" mixes guest and planner actions making the UX confusing.<br />
-        🔧 To minimize number of screens, consider making Assign Guests a pop-up
-        screen - not full.<br />
-        🔧 Must-have desgination shouldn't be clickable for guests, only
-        planners can define this.<br />
-        🔧 Transparent boxes look clickable for guests, consider a different
-        state representation.<br />
-        🔧 Spots claimed entry point in guest RSVP should be a seperate screen
-        to ensure users do not overlook sign-up.<br />
-        🔧 Assign Items icon looks like a clipboard, this can be a toggle.<br />
-        🔧 Put practical uses for list templates at the top (car sign up,
-        potluck, housing…)
-      </p>
     </div>
 
     <div class="container">
