--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         constructive suggestions helped refine usability, clarity, and flow. We were able to implement most suggestions (except a seperate screen for RSVPs).
       </p>
 
-      <h5>Positive feedback</h4>
+      <h4>Positive feedback</h4>
 
       <p>
         ❤️ "Contributions" is a good entry point for list creation.<br />
@@ -144,7 +144,7 @@
         ❤️ Button for refferal system looks cute and clickable.<br />
       </p>
 
-      <h5>Room for Improvement</h4>
+      <h4>Room for Improvement</h4>
       <p>
         💭 What would a list look like if it started from a template?<br />
         🔧 Include only one control for a planner to designate "Must-Have"
@@ -188,7 +188,7 @@
       <h3 class="py-3">User Flows</h3>
 
       <div class="row d-felx d-flex">
-        <div class="col-md-6 py-3">
+        <div class="col-md-6 p-3">
           <h4>Planner</h4>
           <ul>
             <li>
