--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         ></iframe>
       </div>
 
-      <h3 class="py-3">User Flows</h3>
+      <h3 class="pt-3">User Flows</h3>
 
       <div class="row d-felx d-flex">
         <div class="col-md-6 p-3">
