Added more explanations

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
       <ul>
         <li>Entry point from the event page.</li>
         <li>Option to mark an event as a potluck.</li>
-        <li>Hosts can assign items or let guests choose.</li>
-        <li>Guests can view who’s bringing what.</li>
+        <li>Hosts can assign potluck items or let guests choose.</li>
+        <li>Guests can view who’s bringing what for the potluck.</li>
+        <li>Hosts can list what each guest will need for themselves in order to participate. (e.g., all guests need swimwear for beach event)</li>
         <li>Guests can request help for items.</li>
-        <li>Field to indicate shared requirements (e.g., all guests bring swimwear).</li>
+        <li>Gamification feature to allow guests "level up" after attending many events.</li>
       </ul>
 
       <h3>🖼️Wireframes</h3>
@@ -94,7 +95,9 @@
     
     
       <h4>Design Considerations</h4>
-      <p>The challenge was balancing useful functionality with simplicity. We prioritized ease of use over advanced controls to keep the interface intuitive for student users.</p>
+      <p>The challenge was balancing useful functionality with simplicity. We prioritized ease of use over advanced controls to keep the interface intuitive for student users.
+        We left out a few ideas from the sketches because we thought they might be a little overwhelming and we wanted to prioritize the potluck idea. These include gamification, what each person needs to bring for themselves, and asking other guests for help. 
+      </p>
     </div>
 
     <div class="container">
