--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     </div>
 
     <div class="container">
-      <h2>Part 2: Sketching & Wireframing</h2>
+      <h2 class="py-3">Sketching & Wireframing</h2>
       <p><strong>Problem:</strong> The app is popular among young working adults but lacks visibility among college students. The challenge is identifying a feature with strong virality potential on college campuses. Our goal is to increase adoption of the app among college students.</p>
       <p><strong>Importance:</strong> College students frequently host events, especially parties, and represent a large, untapped user base.</p>
       <p><strong>Proposed Solution:</strong> Introduce a potluck feature that allows event guests to contribute items and resources for events. Student-organized events typically have limited budgets and often rely on contributions from attendees. This functionality is not offered by major competitors like Eventbrite or Google Calendar.</p>
     
-      <h3>✏️Sketches</h3>
+      <h3 class="py-3">Sketches ✏️</h3>
       <div style="display: flex; gap: 10px; margin-top: 20px;">
         <img src="sketch1.png" alt="Sketch 1" width="48%">
         <img src="sketch2.jpeg" alt="Sketch 2" width="48%">
@@ -49,7 +49,7 @@
       </div>
       <br>
 
-      <h4>Key Ideas from Sketches</h4>
+      <h4 class="py-3">Key Ideas from Sketches</h4>
       <ul>
         <li>Entry point from the event page.</li>
         <li>Option to mark an event as a potluck.</li>
@@ -60,7 +60,7 @@
         <li>Gamification feature to allow guests "level up" after attending many events.</li>
       </ul>
 
-      <h3>🖼️Wireframes</h3>
+      <h3 class="py-3">Wireframes 🖼️</h3>
       <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-top: 20px;">
         <img src="wire1.png" alt="Sketch 1" style="max-width: 31%; height: auto;">
         <img src="wire2.png" alt="Sketch 2" style="max-width: 31%; height: auto;">
