--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       <p>
         Feedback from mentors and company founders shaped the final hi-fi
         prototype. Positive responses highlighted strong features, while
-        constructive suggestions helped refine usability, clarity, and flow. We were able to implement most suggestions (except a seperate screen for RSVPs). You can view out first draft of the hi-fi prototype here. 
+        constructive suggestions helped refine usability, clarity, and flow. We were able to implement most suggestions (except a seperate screen for RSVPs).
       </p>
 
       <h4>Positive feedback</h4>
