--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="mailto:wangdrak_dorji@brown.edu">Wangdrak Dorji</a>.
       </p>
 
-      <p>This guided project was completed in collaboration with industry partners, including mentorship from Partiful team members and design professionals from Google Ventures. Our goal was to explore how Partiful—a social event planning app popular among young professionals—could gain traction with college students. Below, you</p> 
+      <p>This guided project was completed in collaboration with industry partners, including mentorship from Partiful team members and design professionals from Google Ventures. Our goal was to explore how Partiful—a social event planning app popular among young professionals—could gain traction with college students.</p> 
 
       <p><strong>Problem:</strong> The app is popular among young working adults but lacks visibility among college students. The challenge is identifying a feature with strong virality potential on college campuses. Our goal is to increase adoption of the app among college students.</p>
       <p><strong>Importance:</strong> College students frequently host events, especially parties, and represent a large, untapped user base.</p>
