--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
       <p>
         We aimed to solve these questions with our final design, Hi-Fi
-        Prototype.
+        Prototype, by implementing a referral feature and focusing on quick iterations to get users up and running. 
       </p>
 
       <details>
