--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
         <li>What students use to plan and attend potluck-style events</li>
       </ul>
 
+      <h3 class="py-3 align-center">Research Findings</h3>
       <p>
         Our research indicated that many respondents simply don’t know about
         Partiful. Respondents often rely on other apps or word-of-mouth. Based
